force-app/main/default/objects/Product2.object
<CustomObject>

<fields>
    <fullName>Custom_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Field</label>
    <type>Checkbox</type>
</fields>

<fields>
    <fullName>My_Custom_Field__c</fullName>
    <label>My Custom Field</label>
    <length>255</length>
    <type>Text</type>
</fields>

<fields>
    <fullName>Test_Field__c</fullName>
    <label>Test_Field</label>
    <length>255</length>
    <type>Text</type>
</fields>
</CustomObject>